--- a/feladat.html
+++ b/feladat.html
@@ -39,3 +39,88 @@ UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
 USA_StAugustinePirateShip, not updated, 0.0<br />
 Spain_WineOClock, <b>updated</b>, 458, <a href="https://www.munzee.com/map/ezmmh43by/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Spain_WineOClock.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
+USA_Turtle, not updated, 0.6172839506172849<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
+Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 0.0<br />
+Belgium_KnokkeHeist, not updated, 0.25<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
+Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
+Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
+USA_FortMyersAlligator, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
+Czechia_KMZNAK, not updated, 0.0799999999999983<br />
+Luxembourg_LuxembourgFlag, not updated, 0.0<br />
+USA_MarioFireballVoid, not updated, 0.0<br />
+USA_SpyGoggles, not updated, 0.0<br />
+Hungary_Farkas-erdo, not updated, 0.0<br />
+Hungary_CastleOfDiosgyor, not updated, 0.0<br />
+Denmark_GhostInHilleroed, not updated, 0.0<br />
+USA_CherryBomb kihagyva (100%), <br />
+USA_Stormtrooper kihagyva (100%), <br />
+Australia_BeeFlowers kihagyva (100%), <br />
+Australia_BeeSanta kihagyva (100%), <br />
+Australia_BuzzzBee kihagyva (100%), <br />
+Australia_LaidleyBeeHive kihagyva (100%), <br />
+Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
+Canada_MaillardvilleChristmas kihagyva (100%), <br />
+Finland_KokkolanKurpitsainen kihagyva (100%), <br />
+Hungary_10thBirthdayCake kihagyva (100%), <br />
+Hungary_BlackCat kihagyva (100%), <br />
+Hungary_ChainBridge kihagyva (100%), <br />
+Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
+Hungary_DuckAtBalaton kihagyva (100%), <br />
+Hungary_FlagsInBudapest, not updated, 0.0<br />
+Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
+Hungary_FrogInBudaors kihagyva (100%), <br />
+Hungary_SantasSledge kihagyva (100%), <br />
+Hungary_SnoopyInBudapest kihagyva (100%), <br />
+Hungary_SteamshipOnDanube kihagyva (100%), <br />
+Hungary_SurpriseCar kihagyva (100%), <br />
+Hungary_SurpriseInBudapest kihagyva (100%), <br />
+Hungary_SwansByTheDanube kihagyva (100%), <br />
+Lithuania_Akmenynas kihagyva (100%), <br />
+Lithuania_OZOParkas kihagyva (100%), <br />
+Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
+Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
+Netherlands_EVO2Kerkrade kihagyva (100%), <br />
+Slovakia_Alien kihagyva (100%), <br />
+Sweden_SwedishFlag kihagyva (100%), <br />
+UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
+UnitedKingdom_GriffMemorial kihagyva (100%), <br />
+UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
+USA_BurlingtonFlamingo kihagyva (100%), <br />
+USA_CandyCaneZee kihagyva (100%), <br />
+USA_ChristmasTree kihagyva (100%), <br />
+USA_GingerbreadMan kihagyva (100%), <br />
+USA_GumballMachine kihagyva (100%), <br />
+USA_HOwlOween kihagyva (100%), <br />
+USA_LakelandCandyCorn kihagyva (100%), <br />
+USA_MamaTsLadybug kihagyva (100%), <br />
+USA_MermaidTail kihagyva (100%), <br />
+USA_OctoberPumpkin kihagyva (100%), <br />
+USA_SantaSirPrize, not updated, 0.0<br />
+USA_Snowman kihagyva (100%), <br />
+USA_SprinkleCupcake kihagyva (100%), <br />
+USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
+USA_WestportSpecials kihagyva (100%), <br />
+Netherlands_TheWall, <b>updated</b>, 451, <a href="https://www.munzee.com/map/u1kh9upnp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TheWall.json" target="_blank">json</a> <b>100%</b><br />
