--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.10.28 01:10:13<br />
+<b>start</b> - 2022.10.28 09:24:30<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.25000000000001<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -68,7 +68,7 @@ Hungary_CsepelObol, not updated, 0.0<br />
 Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
 Czechia_KMZNAK, not updated, 0.0799999999999983<br />
 Luxembourg_LuxembourgFlag, not updated, 0.0<br />
-USA_MarioFireballVoid, not updated, 0.0<br />
+USA_MarioFireballVoid, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 USA_SpyGoggles, not updated, 0.0<br />
 Hungary_Farkas-erdo, not updated, 0.0<br />
 Hungary_CastleOfDiosgyor, not updated, 0.0<br />
@@ -148,4 +148,5 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 951, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
+USA_LakevillesSeaTurtle, not updated, 0.29999999999999716<br />
+USA_LightningBoltInSapphire, <b>updated</b>, 166, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
