--- a/feladat.html
+++ b/feladat.html
@@ -173,3 +173,10 @@ Finland_HelsinkiColour, <b>updated</b>, 695, <a href="https://www.munzee.com/map
 USA_BearmomscoutersXmasPolarBear, <b>updated</b>, 238, <a href="https://www.munzee.com/map/dr4uw91wq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BearmomscoutersXmasPolarBear.json" target="_blank">json</a> <b>100%</b><br />
 Germany_SkylarkFeldlerche, <b>updated</b>, 420, <a href="https://www.munzee.com/map/u33d8ch15/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SkylarkFeldlerche.json" target="_blank">json</a> <b>100%</b><br />
 Netherlands_MysteryBikeField, <b>updated</b>, 299, <a href="https://www.munzee.com/map/u15pksmmy/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_MysteryBikeField.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6ewegy/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_GOTM.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.10.28 10:54:00<br />
+összesen 5369<br />
