--- a/log.html
+++ b/log.html
@@ -26226,3 +26226,186 @@ Netherlands_city_Echt, <b>updated</b>, <a href="https://www.munzee.com/map/u1h4t
 ----felhasználók<br />
 <b>stop</b> - 2022.10.26 09:09:36<br />
 összesen 447<br />
+<br />
+<b>start</b> - 2022.10.28 09:24:30<br />
+Slovakia_Giraffe, not updated, 0.0<br />
+Germany_EventPin kihagyva (100%), <br />
+Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_LePetitPrince, not updated, 0.0<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.8200000000000074<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
+Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
+Finland_Hyvinkaa, not updated, 0.6299999999999955<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, not updated, 0.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
+Australia_QueensGambit-Horse, not updated, 0.9345794392523317<br />
+USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.0<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
+USA_Turtle, not updated, 0.7936507936507979<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
+Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 0.0<br />
+Belgium_KnokkeHeist, not updated, 0.25<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
+Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
+Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
+USA_FortMyersAlligator, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
+Czechia_KMZNAK, not updated, 0.0799999999999983<br />
+Luxembourg_LuxembourgFlag, not updated, 0.0<br />
+USA_MarioFireballVoid, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_SpyGoggles, not updated, 0.0<br />
+Hungary_Farkas-erdo, not updated, 0.0<br />
+Hungary_CastleOfDiosgyor, not updated, 0.0<br />
+Denmark_GhostInHilleroed, not updated, 0.0<br />
+USA_CherryBomb kihagyva (100%), <br />
+USA_Stormtrooper kihagyva (100%), <br />
+Australia_BeeFlowers kihagyva (100%), <br />
+Australia_BeeSanta kihagyva (100%), <br />
+Australia_BuzzzBee kihagyva (100%), <br />
+Australia_LaidleyBeeHive kihagyva (100%), <br />
+Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
+Canada_MaillardvilleChristmas kihagyva (100%), <br />
+Finland_KokkolanKurpitsainen kihagyva (100%), <br />
+Hungary_10thBirthdayCake kihagyva (100%), <br />
+Hungary_BlackCat kihagyva (100%), <br />
+Hungary_ChainBridge kihagyva (100%), <br />
+Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
+Hungary_DuckAtBalaton kihagyva (100%), <br />
+Hungary_FlagsInBudapest, not updated, 0.0<br />
+Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
+Hungary_FrogInBudaors kihagyva (100%), <br />
+Hungary_SantasSledge kihagyva (100%), <br />
+Hungary_SnoopyInBudapest kihagyva (100%), <br />
+Hungary_SteamshipOnDanube kihagyva (100%), <br />
+Hungary_SurpriseCar kihagyva (100%), <br />
+Hungary_SurpriseInBudapest kihagyva (100%), <br />
+Hungary_SwansByTheDanube kihagyva (100%), <br />
+Lithuania_Akmenynas kihagyva (100%), <br />
+Lithuania_OZOParkas kihagyva (100%), <br />
+Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
+Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
+Netherlands_EVO2Kerkrade kihagyva (100%), <br />
+Slovakia_Alien kihagyva (100%), <br />
+Sweden_SwedishFlag kihagyva (100%), <br />
+UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
+UnitedKingdom_GriffMemorial kihagyva (100%), <br />
+UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
+USA_BurlingtonFlamingo kihagyva (100%), <br />
+USA_CandyCaneZee kihagyva (100%), <br />
+USA_ChristmasTree kihagyva (100%), <br />
+USA_GingerbreadMan kihagyva (100%), <br />
+USA_GumballMachine kihagyva (100%), <br />
+USA_HOwlOween kihagyva (100%), <br />
+USA_LakelandCandyCorn kihagyva (100%), <br />
+USA_MamaTsLadybug kihagyva (100%), <br />
+USA_MermaidTail kihagyva (100%), <br />
+USA_OctoberPumpkin kihagyva (100%), <br />
+USA_SantaSirPrize, not updated, 0.0<br />
+USA_Snowman kihagyva (100%), <br />
+USA_SprinkleCupcake kihagyva (100%), <br />
+USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
+USA_WestportSpecials kihagyva (100%), <br />
+Netherlands_TheWall kihagyva (100%), <br />
+Netherlands_PompebledPalet kihagyva (100%), <br />
+Netherlands_GroeneStroom kihagyva (100%), <br />
+Netherlands_Klomp kihagyva (100%), <br />
+Netherlands_EvoAppleEch kihagyva (100%), <br />
+Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
+USA_GreenvilleCloverLeaf kihagyva (100%), <br />
+Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_EmeraldInHilleroed, not updated, 0.0<br />
+Finland_HalkokarinEvovene, not updated, 1.0<br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle, not updated, 0.29999999999999716<br />
+USA_LightningBoltInSapphire, <b>updated</b>, 166, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 160, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.0<br />
+USA_MontgomeryBaseball, not updated, 0.0<br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove, not updated, 0.0<br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+UnitedKingdom_HoratioTheHermitCrab, <b>updated</b>, 613, <a href="https://www.munzee.com/map/u12vje1zv/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HoratioTheHermitCrab.json" target="_blank">json</a> <b>100%</b><br />
+Australia_PiratePetesParrot, <b>updated</b>, 235, <a href="https://www.munzee.com/map/r1prduegj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_PiratePetesParrot.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_DownhamCheshireCat, <b>updated</b>, 251, <a href="https://www.munzee.com/map/u12723r3k/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_DownhamCheshireCat.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_TheQueensCrown, <b>updated</b>, 225, <a href="https://www.munzee.com/map/gcjuhy4jd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheQueensCrown.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_SandcastleInSheringham, <b>updated</b>, 214, <a href="https://www.munzee.com/map/u12v5qq8k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SandcastleInSheringham.json" target="_blank">json</a> <b>100%</b><br />
+USA_PiratesTreasure, <b>updated</b>, 418, <a href="https://www.munzee.com/map/dr6hj22x9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesTreasure.json" target="_blank">json</a> <b>100%</b><br />
+Australia_QueenslandKoala, <b>updated</b>, 210, <a href="https://www.munzee.com/map/r7hug0cqd/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueenslandKoala.json" target="_blank">json</a> <b>100%</b><br />
+USA_GiraffeInGadsden, <b>updated</b>, 412, <a href="https://www.munzee.com/map/dn4c7jkn0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GiraffeInGadsden.json" target="_blank">json</a> <b>100%</b><br />
+USA_AnaheimSapphire, <b>updated</b>, 72, <a href="https://www.munzee.com/map/9qh0s9gx9/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AnaheimSapphire.json" target="_blank">json</a> <b>100%</b><br />
+Finland_HelsinkiColour, <b>updated</b>, 695, <a href="https://www.munzee.com/map/ud9y2q5jc/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_HelsinkiColour.json" target="_blank">json</a> <b>100%</b><br />
+USA_BearmomscoutersXmasPolarBear, <b>updated</b>, 238, <a href="https://www.munzee.com/map/dr4uw91wq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BearmomscoutersXmasPolarBear.json" target="_blank">json</a> <b>100%</b><br />
+Germany_SkylarkFeldlerche, <b>updated</b>, 420, <a href="https://www.munzee.com/map/u33d8ch15/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SkylarkFeldlerche.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_MysteryBikeField, <b>updated</b>, 299, <a href="https://www.munzee.com/map/u15pksmmy/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_MysteryBikeField.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6ewegy/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_GOTM.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.10.28 10:54:00<br />
+összesen 5369<br />
