--- a/feladat.html
+++ b/feladat.html
@@ -276,3 +276,4 @@ Germany_JohnTheFab41, <b>updated</b>, 1431, <a href="https://www.munzee.com/map/
 Germany_RingoTheFab4, <b>updated</b>, 250, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
 Germany_GeorgeTheFab42, <b>updated</b>, 684, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
 Germany_PaulTheFab43, <b>updated</b>, 1128, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
+Hungary_AlsogallaJoyPrize, <b>updated</b>, 67, <a href="https://www.munzee.com/map/u2mne5ju5/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_AlsogallaJoyPrize.json" target="_blank">json</a><br />
