--- a/feladat.html
+++ b/feladat.html
@@ -277,3 +277,4 @@ Germany_RingoTheFab4, <b>updated</b>, 250, <a href="https://www.munzee.com/map/u
 Germany_GeorgeTheFab42, <b>updated</b>, 684, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
 Germany_PaulTheFab43, <b>updated</b>, 1128, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
 Hungary_AlsogallaJoyPrize, <b>updated</b>, 67, <a href="https://www.munzee.com/map/u2mne5ju5/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_AlsogallaJoyPrize.json" target="_blank">json</a><br />
+Hungary_MaXGarden, <b>updated</b>, 64, <a href="https://www.munzee.com/map/u2mndcvk0/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MaXGarden.json" target="_blank">json</a> <b>100%</b><br />
